--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -2,7 +2,7 @@
   <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
     <mat-icon>nfc</mat-icon>
   </button>
-  <button mat-flat-button color="primary">
+  <button mat-flat-button color="primary" (click)="onHomeClick()">
     <span>TextError Technology</span>
   </button>
   <span class="example-spacer"></span>
