new image and color gradient change

--- a/src/app/component/resume/resume.component.html
+++ b/src/app/component/resume/resume.component.html
@@ -1,28 +1,37 @@
 <mat-toolbar>
     <mat-toolbar-row>
         <div class="image">
-            <img src="../../../assets/Rv5E32oA_400x400.jpg" alt="deloitte icon" />
+            <img class="image" src="../../../assets/Rv5E32oA_400x400.jpg" alt="deloitte icon" />
         </div>
         <div>
             <input matInput class="txtInput" placeholder="Software Developer Consultant" readonly />
         </div>
         <span class="example-spacer"></span>
 
-        <button mat-icon-button class="example-icon favorite-icon" (click)="onLinkedinClick()" aria-label="Example icon-button with heart icon">
-            <i class="fa fa-linkedin"  style="font-size:30px;"></i>
+        <button mat-icon-button class="example-icon favorite-icon" (click)="onLinkedinClick()"
+            aria-label="Example icon-button with heart icon">
+            <i class="fa fa-linkedin" style="font-size:30px;"></i>
         </button>
-        <button mat-icon-button class="example-icon favorite-icon" (click)="onWhatsApp()" aria-label="Example icon-button with heart icon">
+        <button mat-icon-button class="example-icon favorite-icon" (click)="onWhatsApp()"
+            aria-label="Example icon-button with heart icon">
             <i class="fa fa-whatsapp" style="font-size:30px;"></i>
         </button>
-        <button mat-icon-button class="example-icon favorite-icon" (click)="onGithubClick()" aria-label="Example icon-button with heart icon">
+        <button mat-icon-button class="example-icon favorite-icon" (click)="onGithubClick()"
+            aria-label="Example icon-button with heart icon">
             <i class="fa fa-github" style="font-size:30px;"></i>
         </button>
-        <button mat-icon-button class="example-icon favorite-icon" (click)="sendEmail()" aria-label="Example icon-button with heart icon">
+        <button mat-icon-button class="example-icon favorite-icon" (click)="sendEmail()"
+            aria-label="Example icon-button with heart icon">
             <i class="fa fa-envelope" style="font-size:30px;"></i>
         </button>
         <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
             <mat-icon>http</mat-icon>
         </button>
     </mat-toolbar-row>
-
 </mat-toolbar>
+<mat-card class="matdesign">
+    <img class="card-image" src="../../../assets/IMG_20190209_182633.jpg" alt="photo of Harshal Raverkar">
+    <mat-card-header>
+        <mat-card-title>Harshal Raverkar</mat-card-title>
+    </mat-card-header>
+</mat-card>
